# 3D_curves_hierarchy

./: CMakeLists.txt  README.md
app/: main.cpp  solution.cpp  solution.h
lib/: CMakeLists.txt
lib/Circle/: circle.cpp  circle.h
lib/Curve/: curve.h
lib/Directives/: directive.h
lib/Ellipse/: ellipse.cpp  ellipse.h
lib/Helix/: helix.cpp  helix.h
lib/Point/: point.h
